[package]
name = "query-isbns"
version = "0.1.0"
edition = "2021"
description = "Kleines Kommandozeilenprogramm um die ISBN aus dem CSV-Format (konvertiert aus Excel) der SBA Frankfurt zu extrahieren, validieren und bei der DNB den oid_dc-Datensatz abzufragen und zu speichern"
authors = ["Oliver Schneider"]

[dependencies]
csv = "1.3.0"
isbn3 = "0.4.2"
#reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
